--- a/src/View_Controller/ModifyPart.fxml
+++ b/src/View_Controller/ModifyPart.fxml
@@ -1,11 +1,175 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.RadioButton?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View_Controller.ModifyPartController">
-    
+<AnchorPane id="AnchorPane" prefHeight="515.0" prefWidth="483.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View_Controller.ModifyPartController">
+   <children>
+      <Label fx:id="titleLabel" layoutX="23.0" layoutY="25.0" styleClass="headingLabel" text="Modify Part">
+         <font>
+            <Font name="System Bold" size="16.0" />
+         </font></Label>
+      <HBox alignment="CENTER" layoutX="83.0" layoutY="17.0" prefHeight="33.0" prefWidth="316.0">
+         <children>
+            <RadioButton fx:id="inhouseRadioButton" alignment="TOP_LEFT" mnemonicParsing="false" onAction="#radioButtonChanged" text="In-House">
+               <padding>
+                  <Insets left="5.0" right="5.0" />
+               </padding>
+               <HBox.margin>
+                  <Insets left="10.0" right="10.0" />
+               </HBox.margin>
+            </RadioButton>
+            <RadioButton fx:id="outsourcedRadioButton" mnemonicParsing="false" onAction="#radioButtonChanged" text="Outsourced">
+               <padding>
+                  <Insets left="10.0" right="10.0" />
+               </padding>
+               <HBox.margin>
+                  <Insets left="5.0" right="5.0" />
+               </HBox.margin>
+            </RadioButton>
+         </children>
+      </HBox>
+      <VBox layoutX="14.0" layoutY="50.0" maxHeight="451.0" prefHeight="451.0" prefWidth="454.0">
+         <children>
+            <GridPane prefHeight="416.0" prefWidth="454.0">
+              <columnConstraints>
+                <ColumnConstraints halignment="LEFT" hgrow="SOMETIMES" maxWidth="221.0" minWidth="10.0" prefWidth="89.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="372.0" minWidth="10.0" prefWidth="365.0" />
+              </columnConstraints>
+              <rowConstraints>
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <padding>
+                  <Insets top="10.0" />
+               </padding>
+               <children>
+                  <Label text="ID">
+                     <GridPane.margin>
+                        <Insets left="20.0" />
+                     </GridPane.margin>
+                  </Label>
+                  <Label text="Name" GridPane.rowIndex="1">
+                     <GridPane.margin>
+                        <Insets left="20.0" />
+                     </GridPane.margin>
+                  </Label>
+                  <Label text="Inv" GridPane.rowIndex="2">
+                     <GridPane.margin>
+                        <Insets left="20.0" />
+                     </GridPane.margin>
+                  </Label>
+                  <Label text="Price/Cost" GridPane.rowIndex="3">
+                     <GridPane.margin>
+                        <Insets left="20.0" />
+                     </GridPane.margin>
+                  </Label>
+                  <Label text="Max" GridPane.rowIndex="4">
+                     <GridPane.margin>
+                        <Insets left="20.0" />
+                     </GridPane.margin>
+                  </Label>
+                  <Label fx:id="machineOrCompanyLabel" text="Machine ID" GridPane.rowIndex="5">
+                     <GridPane.margin>
+                        <Insets left="20.0" />
+                     </GridPane.margin>
+                  </Label>
+                  <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" spacing="10.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                     <children>
+                        <TextField fx:id="nameTextField" maxHeight="30.0" maxWidth="120.0" prefHeight="30.0" prefWidth="120.0">
+                           <padding>
+                              <Insets left="8.0" />
+                           </padding>
+                        </TextField>
+                        <Label fx:id="nameTextFieldErrorLabel" prefHeight="50.0" prefWidth="200.0" textFill="RED" wrapText="true" />
+                     </children>
+                  </HBox>
+                  <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" spacing="10.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                     <children>
+                        <TextField fx:id="inStockTextField" maxHeight="30.0" maxWidth="120.0" prefHeight="30.0" prefWidth="120.0">
+                           <padding>
+                              <Insets left="8.0" />
+                           </padding>
+                        </TextField>
+                        <Label fx:id="inStockTextFieldErrorLabel" prefHeight="50.0" prefWidth="200.0" textFill="RED" wrapText="true" />
+                     </children>
+                  </HBox>
+                  <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" spacing="10.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
+                     <children>
+                        <TextField fx:id="priceTextField" maxHeight="30.0" maxWidth="120.0" prefHeight="30.0" prefWidth="120.0">
+                           <padding>
+                              <Insets left="8.0" />
+                           </padding>
+                        </TextField>
+                        <Label fx:id="priceTextFieldErrorLabel" prefHeight="50.0" prefWidth="200.0" textFill="RED" wrapText="true" />
+                     </children>
+                  </HBox>
+                  <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="4">
+                     <children>
+                        <TextField fx:id="maxTextField" maxHeight="30.0" maxWidth="70.0" prefHeight="30.0" prefWidth="50.0">
+                           <padding>
+                              <Insets left="8.0" />
+                           </padding>
+                        </TextField>
+                        <Label fx:id="maxTextFieldErrorLabel" prefHeight="50.0" prefWidth="110.0" textFill="RED" wrapText="true" />
+                        <Label prefHeight="17.0" prefWidth="32.0" text="Min" />
+                        <TextField fx:id="minTextField" maxHeight="30.0" maxWidth="70.0" prefHeight="70.0" prefWidth="50.0">
+                           <HBox.margin>
+                              <Insets left="15.0" />
+                           </HBox.margin>
+                           <padding>
+                              <Insets left="8.0" />
+                           </padding>
+                        </TextField>
+                        <Label fx:id="minTextFieldErrorLabel" prefHeight="50.0" prefWidth="110.0" textFill="RED" wrapText="true" />
+                     </children>
+                  </HBox>
+                  <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" spacing="10.0" GridPane.columnIndex="1" GridPane.rowIndex="5">
+                     <children>
+                        <TextField fx:id="machineCompanyTextField" maxHeight="30.0" maxWidth="120.0" prefHeight="30.0" prefWidth="120.0">
+                           <padding>
+                              <Insets left="8.0" />
+                           </padding>
+                        </TextField>
+                        <Label fx:id="machineCompanyTextFieldErrorLabel" prefHeight="50.0" prefWidth="200.0" textFill="RED" wrapText="true" />
+                     </children>
+                  </HBox>
+                  <TextField fx:id="partIDTextField" disable="true" editable="false" maxHeight="30.0" maxWidth="120.0" prefHeight="30.0" prefWidth="120.0" GridPane.columnIndex="1">
+                     <padding>
+                        <Insets left="8.0" />
+                     </padding>
+                  </TextField>
+               </children>
+            </GridPane>
+            <HBox alignment="CENTER_RIGHT" prefHeight="100.0" prefWidth="200.0">
+               <children>
+                  <Button fx:id="saveButton" mnemonicParsing="false" onAction="#handleSaveButtonAction" prefHeight="25.0" prefWidth="60.0" text="Save">
+                     <HBox.margin>
+                        <Insets bottom="15.0" left="15.0" right="15.0" top="15.0" />
+                     </HBox.margin>
+                  </Button>
+                  <Button fx:id="cancelButton" mnemonicParsing="false" onAction="#handleCancelButtonAction" prefHeight="25.0" prefWidth="60.0" text="Cancel">
+                     <HBox.margin>
+                        <Insets bottom="15.0" left="15.0" right="15.0" top="15.0" />
+                     </HBox.margin>
+                  </Button>
+               </children>
+            </HBox>
+         </children>
+      </VBox>
+   </children>
 </AnchorPane>
