--- a/src/View_Controller/MainScreen.fxml
+++ b/src/View_Controller/MainScreen.fxml
@@ -11,8 +11,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="680.0" prefWidth="1200.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171" fx:controller="View_Controller.MainScreenController">
+<AnchorPane id="AnchorPane" prefHeight="680.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View_Controller.MainScreenController">
    <children>
       <Label layoutX="46.0" layoutY="49.0" text="Inventory Management System" textFill="#457fae">
          <font>
@@ -52,7 +51,7 @@
             </TableView>
             <HBox alignment="TOP_RIGHT" prefHeight="123.0" prefWidth="528.0" spacing="15.0">
                <children>
-                  <Label alignment="CENTER_RIGHT" prefHeight="25.0" prefWidth="200.0" text="Error" textFill="RED" />
+                  <Label fx:id="partSelectionErrorLabel" alignment="CENTER_RIGHT" prefHeight="25.0" prefWidth="200.0" textFill="RED" />
                   <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="75.0" text="Add" />
                   <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="75.0" text="Modify" />
                   <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="75.0" text="Delete" />
@@ -99,7 +98,7 @@
             </TableView>
             <HBox alignment="TOP_RIGHT" prefHeight="123.0" prefWidth="528.0" spacing="15.0">
                <children>
-                  <Label alignment="CENTER_RIGHT" prefHeight="25.0" prefWidth="200.0" text="Error" textFill="RED" />
+                  <Label fx:id="productSelectionErrorLabel" alignment="CENTER_RIGHT" prefHeight="25.0" prefWidth="200.0" textFill="RED" />
                   <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="75.0" text="Add" />
                   <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="75.0" text="Modify" />
                   <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="75.0" text="Delete" />
