--- a/src/View_Controller/ModifyPart.fxml
+++ b/src/View_Controller/ModifyPart.fxml
@@ -15,7 +15,7 @@
 
 <AnchorPane id="AnchorPane" prefHeight="515.0" prefWidth="483.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View_Controller.ModifyPartController">
    <children>
-      <Label fx:id="titleLabel" layoutX="23.0" layoutY="25.0" styleClass="headingLabel" text="Modify Part">
+      <Label fx:id="titleLabel" layoutX="28.0" layoutY="21.0" styleClass="headingLabel" text="Modify Part" textFill="#447eae">
          <font>
             <Font name="System Bold" size="16.0" />
          </font></Label>
@@ -157,12 +157,12 @@
             </GridPane>
             <HBox alignment="CENTER_RIGHT" prefHeight="100.0" prefWidth="200.0">
                <children>
-                  <Button fx:id="saveButton" mnemonicParsing="false" onAction="#handleSaveButtonAction" prefHeight="25.0" prefWidth="60.0" text="Save">
+                  <Button fx:id="saveButton" mnemonicParsing="false" onAction="#handleSaveButtonAction" prefHeight="25.0" prefWidth="75.0" text="Save">
                      <HBox.margin>
                         <Insets bottom="15.0" left="15.0" right="15.0" top="15.0" />
                      </HBox.margin>
                   </Button>
-                  <Button fx:id="cancelButton" mnemonicParsing="false" onAction="#handleCancelButtonAction" prefHeight="25.0" prefWidth="60.0" text="Cancel">
+                  <Button fx:id="cancelButton" mnemonicParsing="false" onAction="#handleCancelButtonAction" prefHeight="25.0" prefWidth="75.0" text="Cancel">
                      <HBox.margin>
                         <Insets bottom="15.0" left="15.0" right="15.0" top="15.0" />
                      </HBox.margin>
